test/expected/simple-next-tick.txt
/scripts/simple-next-tick.js:8
  throw new Error('trace');
  ^

Error: trace
    at callback (/scripts/simple-next-tick.js:8:9)
    at _combinedTickCallback (internal/process/next_tick.js:134:7)
    at process._tickCallback (internal/process/next_tick.js:201:9)
    at Function.Module.runMain (module.js:607:11)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:575:3
    at process.nextTick (internal/process/next_tick.js:291:7)
    at Object.<anonymous> (/scripts/simple-next-tick.js:7:9)
    at Module._compile (module.js:569:30)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:503:32)
    at tryModuleLoad (module.js:466:12)
    at Function.Module._load (module.js:458:3)
    at Function.Module.runMain (module.js:605:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:575:3
